--- a/src/main/resources/swagger/api-docs.yaml
+++ b/src/main/resources/swagger/api-docs.yaml
@@ -1479,7 +1479,7 @@ paths:
         content:
           'application/json':
             schema:
-              $ref: '#/components/schemas/GetOrCreatePetManagedIdentityRequest'
+              $ref: '#/components/schemas/GetOrCreateManagedIdentityRequest'
         required: true
       responses:
         200:
@@ -1528,7 +1528,7 @@ paths:
         content:
           'application/json':
             schema:
-              $ref: '#/components/schemas/GetOrCreatePetManagedIdentityRequest'
+              $ref: '#/components/schemas/GetOrCreateManagedIdentityRequest'
         required: true
       responses:
         200:
@@ -1559,6 +1559,70 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorReport'
+  /api/azure/v1/actionManagedIdentity/{resourceTypeName}/{resourceId}/{action}:
+    post:
+      tags:
+        - Azure
+      summary: gets or creates an action managed identity that the calling user has access to
+      operationId: getActionManagedIdentity
+      parameters:
+        - name: resourceTypeName
+          in: path
+          description: Type of resource
+          required: true
+          schema:
+            type: string
+        - name: resourceId
+          in: path
+          description: Id of resource
+          required: true
+          schema:
+            type: string
+        - name: action
+          in: path
+          description: Action to get the managed identity for
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: The details of the managed resource group in which to create the action managed identity
+        content:
+          'application/json':
+            schema:
+              $ref: '#/components/schemas/GetOrCreateManagedIdentityRequest'
+        required: true
+      responses:
+        200:
+          description: Successfully retrieved the action managed identity without creating it
+          content:
+            application/json:
+              schema:
+                type: string
+        201:
+          description: Successfully created the action managed identity
+          content:
+            application/json:
+              schema:
+                type: string
+        400:
+          description: Invalid or incomplete request body
+          content: { }
+        403:
+          description: Caller does not have the action on the resource
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorReport'
+        404:
+          description: Resource does not exist
+          content: { }
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorReport'
+
   /api/resources/v2:
     get:
       tags:
@@ -4210,7 +4274,7 @@ components:
           type: string
           description: the name of the Azure managed resource group
           example: my-managed-resource-group
-    GetOrCreatePetManagedIdentityRequest:
+    GetOrCreateManagedIdentityRequest:
       required:
         - tenantId
         - subscriptionId
@@ -4229,7 +4293,7 @@ components:
           type: string
           description: the name of the Azure managed resource group
           example: my-managed-resource-group
-      description: specifies a request for a pet managed identity
+      description: specifies a request for a managed identity
     User:
       type: object
       required:
