--- a/src/main/resources/swagger/api-docs.yaml
+++ b/src/main/resources/swagger/api-docs.yaml
@@ -1559,11 +1559,73 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorReport'
-  /api/azure/v1/actionManagedIdentity/{resourceTypeName}/{resourceId}/{action}:
+  /api/azure/v1/actionManagedIdentity/{billingProfileId}/{resourceTypeName}/{resourceId}/{action}:
     post:
       tags:
         - Azure
-      summary: gets or creates an action managed identity that the calling user has access to
+      summary: creates an action managed identity that the calling user has access to
+      operationId: createActionManagedIdentity
+      parameters:
+        - name: billingProfileId
+          in: path
+          description: Billing Profile if the Managed Resource Group to create the Action Managed Identity in
+          required: true
+          schema:
+            type: string
+        - name: resourceTypeName
+          in: path
+          description: Type of resource
+          required: true
+          schema:
+            type: string
+        - name: resourceId
+          in: path
+          description: Id of resource
+          required: true
+          schema:
+            type: string
+        - name: action
+          in: path
+          description: Action to create the managed identity for
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Action managed identity already exists
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ActionManagedIdentityResponse'
+        201:
+          description: Successfully created the action managed identity
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ActionManagedIdentityResponse'
+        400:
+          description: Invalid or incomplete request body
+          content: { }
+        403:
+          description: Caller does not have the action on the resource
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorReport'
+        404:
+          description: Resource does not exist
+          content: { }
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorReport'
+  /api/azure/v1/actionManagedIdentity/{resourceTypeName}/{resourceId}/{action}:
+    get:
+      tags:
+        - Azure
+      summary: gets an action managed identity that the calling user has access to
       operationId: getActionManagedIdentity
       parameters:
         - name: resourceTypeName
@@ -1584,20 +1646,13 @@ paths:
           required: true
           schema:
             type: string
-      requestBody:
-        description: The details of the managed resource group in which to create the action managed identity
-        content:
-          'application/json':
-            schema:
-              $ref: '#/components/schemas/GetOrCreateManagedIdentityRequest'
-        required: true
       responses:
         200:
           description: Successfully retrieved the action managed identity without creating it
           content:
             application/json:
               schema:
-                type: string
+                $ref: '#/components/schemas/ActionManagedIdentityResponse'
         201:
           description: Successfully created the action managed identity
           content:
@@ -4294,6 +4349,30 @@ components:
           description: the name of the Azure managed resource group
           example: my-managed-resource-group
       description: specifies a request for a managed identity
+    ActionManagedIdentityId:
+      type: object
+      required:
+        - resourceId
+        - action
+        - billingProfileId
+      properties:
+        resourceId:
+          $ref: '#/components/schemas/FullyQualifiedResourceId'
+        action:
+          type: string
+        billingProfileId:
+          type: string
+    ActionManagedIdentityResponse:
+      type: object
+      properties:
+        id:
+          $ref: '#/components/schemas/ActionManagedIdentityId'
+        objectId:
+          type: string
+        displayName:
+          type: string
+        managedResourceGroupCoordinates:
+          $ref: '#/components/schemas/ManagedResourceGroupCoordinates'
     User:
       type: object
       required:
