--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1550,6 +1550,60 @@ resourceTypes = {
     allowLeaving = false
     reuseIds = true
   }
+
+  resource-access-constraint = {
+    actionPatterns = {
+      use = {
+        description = "use this RAC for a SAM resource"
+      }
+      add_lock = {
+        description = "add a lock to this RAC"
+      }
+      delete = {
+        description = "delete this RAC"
+      }
+      read_policies = {
+        description = "view all policies and policy details for this RAC"
+      }
+      "share_policy::owner" = {
+        description = "change the membership of the owner policy for this RAC"
+      }
+    }
+    ownerRoleName = "owner"
+    roles = {
+      owner = {
+        roleActions = ["use", "add_lock", "delete", "read_policies", "share_policy::owner"]
+      }
+    }
+    allowLeaving = false
+    reuseIds = true
+  }
+
+  lock = {
+    actionPatterns = {
+      use = {
+        description = "use this lock for a resource access constraint"
+      }
+      delete = {
+        description = "delete this lock"
+      }
+      read_policies = {
+        description = "view all policies and policy details for this lock"
+      }
+      "share_policy::owner" = {
+        description = "change the membership of the owner policy for this lock"
+      }
+    }
+    ownerRoleName = "owner"
+    roles = {
+      owner = {
+        roleActions = ["use", "delete", "read_policies", "share_policy::owner"]
+      }
+    }
+    allowLeaving = false
+    reuseIds = true
+  }
+
 }
 
 
