support role and managed group summary api

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -33,6 +33,9 @@ resourceTypes = {
       admin_remove_member = {
         description = "remove membership from policies on resources associated with this resource"
       }
+      admin_read_summary_information = {
+        description = "view summary information on resources of this resource type"
+      }
     }
 
     ownerRoleName = "owner"
@@ -42,6 +45,9 @@ resourceTypes = {
       }
       admin = {
         roleActions = ["admin_read_policies", "admin_add_member", "admin_remove_member"]
+      }
+      support = {
+        roleActions = ["admin_read_summary_information", "admin_read_policies"]
       }
     }
     reuseIds = false
