--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1666,22 +1666,22 @@ resourceTypes = {
     reuseIds = true
   }
 
-  azure_private_endpoint_access = {
+  azure_managed_identity = {
     actionPatterns = {
       delete = {
-        description = "Delete this private endpoint access"
+        description = "Delete this azure managed identity"
       }
       read_policies = {
-        description = "view all policies and policy details for this private endpoint access"
+        description = "view all policies and policy details for this azure managed identity"
       }
       identify = {
-        description = "use the identity that has access to this private endpoint access"
+        description = "use the identity that has access to this azure managed identity"
       }
       "share_policy::admin" = {
-        description = "change the membership of the admin policy for this private endpoint access"
+        description = "change the membership of the admin policy for this azure managed identity"
       }
       "share_policy::user" = {
-        description = "change the membership of the user policy for this private endpoint access"
+        description = "change the membership of the user policy for this azure managed identity"
       }
     }
     ownerRoleName = "admin"
