--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1348,11 +1348,14 @@ resourceTypes = {
       approve = {
         description = "Approve or reject the snapshot builder request"
       }
+      set_parent = {
+        description = "Enables setting the parent on the request object
+      }
     }
     ownerRoleName = "owner"
     roles = {
       owner = {
-        roleActions = ["get", "update", "delete"]
+        roleActions = ["get", "update", "delete", "set_parent"]
       }
       approver = {
         roleActions = ["get", "approve"]
