--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1349,7 +1349,7 @@ resourceTypes = {
         description = "Approve or reject the snapshot builder request"
       }
       set_parent = {
-        description = "Enables setting the parent on the request object
+        description = "Enables setting the parent on the request object"
       }
     }
     ownerRoleName = "owner"
