--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1199,12 +1199,6 @@ resourceTypes = {
       view_journal = {
         description = "View dataset journal entries"
       }
-      view_snapshot_builder_settings = {
-        description = "allows viewing the snapshot builder settings"
-      }
-      update_snapshot_builder_settings = {
-        description = "allows updating the snapshot builder settings"
-      }
       "lock_resource" = {
         description = "Can lock a resource"
       }
@@ -1227,7 +1221,7 @@ resourceTypes = {
         roleActions = ["read_dataset", "read_data", "read_policies", "link_snapshot"]
       }
       admin = {
-        roleActions = ["share_policy::steward", "read_policies", "alter_policies", "view_snapshot_builder_settings", "update_snapshot_builder_settings", "unlock_resource"]
+        roleActions = ["share_policy::steward", "read_policies", "alter_policies", "unlock_resource"]
       }
     }
     reuseIds = true
