--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1655,9 +1655,6 @@ resourceTypes = {
       write = {
         description = "write to the private azure storage account"
       }
-      identify = {
-        description = "DEPRECATED - use the identity to access the storage account"
-      }
       "share_policy::owner" = {
         description = "change the membership of the owner policy for this private azure storage account"
       }
@@ -1671,16 +1668,13 @@ resourceTypes = {
     ownerRoleName = "owner"
     roles = {
       owner = {
-        roleActions = ["delete", "read_policies", "use", "share_policy::owner", "share_policy::reader", "share_policy::writer", "read", "write"]
+        roleActions = ["delete", "read_policies", "share_policy::owner", "share_policy::reader", "share_policy::writer", "read", "write"]
       }
       reader = {
         roleActions = ["read"]
       }
       writer = {
         roleActions = ["write"]
-      }
-      user = {
-        roleActions = ["identify"]
       }
     }
     allowLeaving = false
