--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1621,17 +1621,17 @@ resourceTypes = {
       pull_image = {
         description = "pull an image from the private azure container registry"
       }
-      "share_policy::admin" = {
-        description = "change the membership of the admin policy for this private azure container registry"
+      "share_policy::owner" = {
+        description = "change the membership of the owner policy for this private azure container registry"
       }
       "share_policy::reader" = {
         description = "change the membership of the reader policy for this private azure container registry"
       }
     }
-    ownerRoleName = "admin"
+    ownerRoleName = "owner"
     roles = {
-      admin = {
-        roleActions = ["delete", "read_policies", "use", "share_policy::admin", "share_policy::reader", "pull_image"]
+      owner = {
+        roleActions = ["delete", "read_policies", "use", "share_policy::owner", "share_policy::reader", "pull_image"]
       }
       reader = {
         roleActions = ["pull_image"]
