--- a/.github/workflows/sam-build-tag-publish-and-run-tests.yaml
+++ b/.github/workflows/sam-build-tag-publish-and-run-tests.yaml
@@ -22,9 +22,30 @@ jobs:
       release-branches: develop
     secrets: inherit
 
+  extract-branch:
+    runs-on: ubuntu-latest
+    outputs:
+      branch-name: ${{ steps.extract-branch.outputs.branch-name }}
+    steps:
+      # we need this because github can't actually provide the branch name reliably
+      # https://github.com/orgs/community/discussions/5251
+      - name: Extract branch
+        id: extract-branch
+        run: |
+          if [[ '${{ github.event_name }}' == 'push' ]]; then
+            BRANCH_NAME=${{ github.ref_name }}
+          elif [[ '${{ github.event_name }}' == 'pull_request' ]]; then
+            BRANCH_NAME=${{ github.head_ref }}
+          else
+            echo "Failed to extract branch information"
+            exit 1
+          fi
+
+          echo "branch-name=$BRANCH_NAME" >> $GITHUB_OUTPUT
+
   sam-build-tag-publish-job:
     runs-on: ubuntu-latest
-    needs: [ tag ]
+    needs: [ tag, extract-branch ]
     permissions:
       contents: 'read'
       id-token: 'write'
@@ -43,22 +64,6 @@ jobs:
           echo "github.head_ref ${{ github.head_ref }}"
           echo "github ${{ github }}"
 
-      # we need this because github can't actually provide the branch name reliably
-      # https://github.com/orgs/community/discussions/5251
-      - name: Extract branch
-        id: extract-branch
-        run: |
-          if [[ '${{ github.event_name }}' == 'push' ]]; then
-            BRANCH_NAME=${{ github.ref_name }}
-          elif [[ '${{ github.event_name }}' == 'pull_request' ]]; then
-            BRANCH_NAME=${{ github.head_ref }}
-          else
-            echo "Failed to extract branch information"
-            exit 1
-          fi
-
-          echo "name=$BRANCH_NAME" >> $GITHUB_OUTPUT
-
       # Builds Sam elsewhere to protect secrets.  Upon success, will tag the commit in git.
       - name: dispatch build to terra-github-workflows
         uses: broadinstitute/workflow-dispatch@v3
@@ -67,7 +72,7 @@ jobs:
           repo: broadinstitute/terra-github-workflows
           ref: refs/heads/main
           token: ${{ secrets.BROADBOT_TOKEN}} # github token for access to kick off a job in the private repo
-          inputs: '{ "repository": "${{ github.event.repository.full_name }}", "ref": "${{ steps.extract-branch.outputs.name }}", "sam-release-tag": "${{ needs.tag.outputs.tag }}" }'
+          inputs: '{ "repository": "${{ github.event.repository.full_name }}", "ref": "${{ needs.extract-branch.outputs.branch-name }}", "sam-release-tag": "${{ needs.tag.outputs.tag }}" }'
 
       - name: Render Sam version
         id: render-sam-version
@@ -175,7 +180,7 @@ jobs:
         terra-env: [ dev ] # what versions of apps do we use to emulate types of environments
         testing-env: [ qa ] # what env resources to use, e.g. SA keys
     runs-on: ubuntu-latest
-    needs: [sam-smoke-test-job, prepare-configs]
+    needs: [sam-smoke-test-job, prepare-configs, extract-branch]
     permissions:
       contents: 'read'
       id-token: 'write'
@@ -188,7 +193,7 @@ jobs:
           ref: refs/heads/main
           token: ${{ secrets.BROADBOT_TOKEN}} # github token for access to kick off a job in the private repo
           # manually recalculate b/c env context is broken https://github.com/actions/runner/issues/480
-          inputs: '{ "bee-name": "${{ github.event.repository.name }}-${{ github.run_id }}-${{ matrix.terra-env }}", "ENV": "${{ matrix.testing-env }}", "log-results": "${{ needs.prepare-configs.outputs.log-results }}", "test-context": "${{ needs.prepare-configs.outputs.test-context }}", "caller_run_id": "${{ github.run_id }}" }'
+          inputs: '{ "bee-name": "${{ github.event.repository.name }}-${{ github.run_id }}-${{ matrix.terra-env }}", "ENV": "${{ matrix.testing-env }}", "log-results": "${{ needs.prepare-configs.outputs.log-results }}", "test-context": "${{ needs.prepare-configs.outputs.test-context }}", "caller_run_id": "${{ github.run_id }}", "ref": "${{ needs.extract-branch.outputs.branch-name }} }'
 
   rawls-swat-test-job:
     strategy:
