Fix Leo access control

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -175,6 +175,8 @@ resourceTypes = {
           wds-instance = ["owner"]
           kubernetes-app = ["manager"]
           kubernetes-app-shared = ["owner", "user"]
+          notebook-cluster = ["manager"]
+          persistent-disk = ["manager"]
         }
       }
       application = {
@@ -610,17 +612,8 @@ resourceTypes = {
       read_policies = {
         description = "list all policies and policy details for this google-project"
       }
-      list_notebook_cluster = {
-        description = "list all notebook clusters in this google-project"
-      }
       launch_notebook_cluster = {
         description = "launch a new notebook cluster in this google-project"
-      }
-      delete_notebook_cluster = {
-        description = ""
-      }
-      stop_start_notebook_cluster = {
-        description = "stop and start notebook clusters in this google-project"
       }
       list_persistent_disk = {
         description = "list all persistent disks in this google-project"
@@ -656,10 +649,12 @@ resourceTypes = {
     ownerRoleName = "owner"
     roles = {
       owner = {
-        roleActions = ["read_policies", "list_notebook_cluster", "delete_notebook_cluster", "list_persistent_disk", "delete_persistent_disk", "delete", "get_parent", "set_parent", "list_children"]
+        roleActions = ["read_policies", "delete", "get_parent", "set_parent", "list_children"]
         includedRoles = ["notebook-user", "pet-creator"]
         descendantRoles = {
           kubernetes-app = ["manager"]
+          notebook-cluster = ["manager"]
+          persistent-disk = ["manager"]
         }
       }
       notebook-user = {
@@ -790,6 +785,7 @@ resourceTypes = {
       }
       connect = {
         description = "connect to the Jupyter notebook running on the notebook cluster"
+        authDomainConstrainable = true
       }
       delete = {
         description = "delete the notebook cluster"
@@ -803,22 +799,30 @@ resourceTypes = {
       modify = {
         description = "modify attributes of the cluster"
       }
+      set_parent = {
+        description = "set parent of notebook cluster"
+      }
     }
     ownerRoleName = "creator"
     roles = {
       creator = {
         roleActions = ["status", "connect", "delete", "read_policies", "stop_start", "modify"]
       }
+      manager = {
+        roleActions = ["status", "delete", "read_policies"]
+      }
     }
     reuseIds = false
+    authDomainConstrainable = true
   }
   persistent-disk = {
     actionPatterns = {
       read = {
-        description = "read metadata and contents of persistent disk"
+        description = "read metadata of persistent disk"
       }
       attach = {
         description = "attach persistent disk to a VM"
+        authDomainConstrainable = true
       }
       modify = {
         description = "modify persistent disk"
@@ -835,8 +839,12 @@ resourceTypes = {
       creator = {
         roleActions = ["read", "attach", "modify", "delete", "read_policies"]
       }
+      manager = {
+        roleActions = ["delete", "read", "read_policies"]
+      }
     }
     reuseIds = false
+    authDomainConstrainable = true
   }
   kubernetes-app = {
     actionPatterns = {
@@ -845,6 +853,7 @@ resourceTypes = {
       }
       connect = {
         description = "connect to kubernetes application"
+        authDomainConstrainable = true
       }
       update = {
         description = "update kubernetes application"
@@ -875,6 +884,7 @@ resourceTypes = {
       }
     }
     reuseIds = false
+    authDomainConstrainable = true
   }
   kubernetes-app-shared = {
     actionPatterns = {
