Don't remove google-project actions just yet

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -608,15 +608,36 @@ resourceTypes = {
     reuseIds = false
   }
   google-project = {
+    # TODO: remove the following actions when notebook-cluster and persistent-disk have migrated to have parent resources.
+    # - list_notebook_cluster
+    # - delete_notebook_cluster
+    # - stop_start_notebook_cluster
+    # - list_persistent_disk
+    # - delete_persistent_disk
     actionPatterns = {
       read_policies = {
         description = "list all policies and policy details for this google-project"
       }
+      list_notebook_cluster = {
+        description = "list all notebook clusters in this google-project"
+      }
       launch_notebook_cluster = {
         description = "launch a new notebook cluster in this google-project"
       }
+      delete_notebook_cluster = {
+        description = ""
+      }
+      stop_start_notebook_cluster = {
+        description = "stop and start notebook clusters in this google-project"
+      }
+      list_persistent_disk = {
+        description = "list all persistent disks in this google-project"
+      }
       create_persistent_disk = {
         description = "create persistent disk in this google-project"
+      }
+      delete_persistent_disk = {
+        description = "delete persistent disk in this google-project"
       }
       create_kubernetes_app = {
         description = "create kubernetes application in this google-project"
@@ -643,7 +664,7 @@ resourceTypes = {
     ownerRoleName = "owner"
     roles = {
       owner = {
-        roleActions = ["read_policies", "delete", "get_parent", "set_parent", "list_children"]
+        roleActions = ["read_policies", "list_notebook_cluster", "delete_notebook_cluster", "list_persistent_disk", "delete_persistent_disk", "delete", "get_parent", "set_parent", "list_children"]
         includedRoles = ["notebook-user", "pet-creator"]
         descendantRoles = {
           kubernetes-app = ["manager"]
