Make sure to add set_parent

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -821,7 +821,7 @@ resourceTypes = {
     ownerRoleName = "creator"
     roles = {
       creator = {
-        roleActions = ["status", "connect", "delete", "read_policies", "stop_start", "modify"]
+        roleActions = ["status", "connect", "delete", "read_policies", "stop_start", "modify", "set_parent"]
       }
       manager = {
         roleActions = ["status", "delete", "read_policies"]
@@ -848,11 +848,14 @@ resourceTypes = {
       read_policies = {
         description = "view all policies and policy details for the persistent disk"
       }
+      set_parent = {
+        description = "set parent of persistent disk"
+      }
     }
     ownerRoleName = "creator"
     roles = {
       creator = {
-        roleActions = ["read", "attach", "modify", "delete", "read_policies"]
+        roleActions = ["read", "attach", "modify", "delete", "read_policies", "set_parent"]
       }
       manager = {
         roleActions = ["delete", "read", "read_policies"]
