Remove project-specific Pet Service Accounts

--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -117,6 +117,8 @@ googleServices {
     samplingProbability = ${?OPENCENSUS_SAMPLING_PROBABILITY} # for backwards compatibility
     samplingProbability = ${?GOOGLE_TRACE_SAMPLING_PROBABILITY}
   }
+
+  serviceAgents = ${?SERVICE_AGENTS}
 }
 
 db {
